--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -70,8 +70,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem; /* Adjust padding as needed */
-  background: background-color: #333;;
-background: linear-gradient(138deg, rgba(70,24,78,0.9260140728476821) 0%, rgba(25,25,57,0.9525041390728477) 34%, rgba(47,25,58,0.9127690397350994) 59%, rgba(56,46,80,0.9690604304635762) 77%, rgba(75,78,99,0.9756829470198676) 100%);
+ background-color: #05001d;
+
 }
 
 .nav-links {
@@ -326,7 +326,7 @@ background: linear-gradient(138deg, rgba(70,24,78,0.9260140728476821) 0%, rgba(2
 
 /* Style the footer */
 .footer {
-  background-color: #333;
+  background-color: #05001d;
   color: white;
   padding: 20px 0;
   text-align: center;
